<resources>
    <string name="app_name">ForgetMeNot</string>
    <string name="title_home">Home</string>
    <string name="title_accountability">Accountability</string>
    <string name="title_resources">Resources</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_adding">Adding</string>
    <string name="title_competition">Competition</string>
    <string name="adding_text">Hello this is adding</string>
    <string name="compeition_text">Hello this is compeition</string>
    <string name="sleep">Sleep</string>
    <string name="food">Food</string>
    <string name="screen_time">Screen Time</string>
    <string name="ninjuh_bruh">ninjuh bruh so cool wowie</string>
</resources>