<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_accountability"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_accountability" />

    <item
        android:id="@+id/navigation_resources"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_resources" />
    <item
        android:id="@+id/navigation_adding"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/title_adding" />
    <item
        android:id="@+id/navigation_competition"
        android:icon="@drawable/trophy_13269"
        android:title="@string/title_competition" />

</menu>