<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.forgetmenot.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_accountability"
        android:name="com.example.forgetmenot.ui.accountability.AccountabilityFragment"
        android:label="@string/title_accountability"
        tools:layout="@layout/fragment_accountability" />

    <fragment
        android:id="@+id/navigation_resources"
        android:name="com.example.forgetmenot.ui.resources.ResourcesFragment"
        android:label="@string/title_resources"
        tools:layout="@layout/fragment_resources" />
    <fragment
        android:id="@+id/navigation_adding"
        android:name="com.example.forgetmenot.ui.adding.adding"
        android:label="Adding"
        tools:layout="@layout/fragment_adding" />
    <fragment
        android:id="@+id/navigation_competition"
        android:name="com.example.forgetmenot.ui.competition.competition"
        android:label="Competition"
        tools:layout="@layout/fragment_competition" />
</navigation>